Change service type
NodePort for ClusterIP

--- a/devops/01/app/app/values.yaml
+++ b/devops/01/app/app/values.yaml
@@ -4,6 +4,6 @@ image:
   pullPolicy: IfNotPresent
 service:
   name: appnode
-  type: NodePort
+  type: ClusterIP
   externalPort: 3000
   internalPort: 3000
