--- a/devops/01/.gitignore
+++ b/devops/01/.gitignore
@@ -5,6 +5,8 @@ infra/terraform/terraform.tfstate
 infra/terraform/terraform.tfstate.backup
 infra/terraform/.terraform
 infra/terraform/k8s-key.pub
+infra/terraform/variables.tf
 infra/ansible/k8s-key
 infra/ansible/playbooks/join_token
 infra/ansible/playbooks/kubeconfig
+infra/ansible/hosts
